...

    <TextView
        android:id="@+id/taskDescriptionLabel_TaskDetail3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Review Stacks and Queues"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/taskDescription_TaskDetail2"
        app:layout_constraintTop_toBottomOf="@+id/taskDescription_TaskDetail2" />

    <EditText
        android:id="@+id/taskDescription_TaskDetail2"
...

    <TextView
        android:id="@+id/taskDescriptionLabel_TaskDetail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Review HashMaps/Tables"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/taskDescription_TaskDetail"
        app:layout_constraintTop_toBottomOf="@+id/taskDescription_TaskDetail" />

    <EditText
        android:id="@+id/taskDescription_TaskDetail"
...
