...
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingsButtonHomePage"
        android:layout_width="32dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <TextView
        android:id="@+id/userNameHomePage"
        android:layout_width="151dp"
        android:layout_height="26dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textAlignment="center"
...
